<resources>
    <string name="app_name">UI Kotlin</string>
    <string name="android_kotlin_ui">Android Kotlin UI</string>
    <string name="balaji_krishnan">BALAJI KRISHNAN</string>
    <string name="gmail">balajikrishnan00@gmail.com</string>
    <string name="feedback">Feed Back</string>
    <string name="quiz">Quiz</string>
    <string name="rate_us">Rate Us</string>
    <string name="send">Send</string>
    <string name="about_us">About us</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="widgets">Widgets</string>
    <string name="toast">Toast</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date">Date</string>
    <string name="container">Container</string>
    <string name="menu">Menu</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="activity">Activity</string>
    <string name="fragment">Fragment</string>
    <string name="wifi_manager">Wifi Manager</string>
    <string name="animation">Animation</string>
    <string name="calculator">Calculator</string>
    <string name="material_design">Material Design</string>
    <string name="notification">Notification</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="sqlite">Sqlite</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="share">Share</string>
    <string name="device">Device</string>
    <string name="data_storage">Data Storage</string>
    <string name="google_map">Google Map</string>
    <string name="image">Image</string>
    <string name="time">Time</string>
    <string name="text_view">Text View</string>
    <string name="edit_text">Edit Text</string>
    <string name="button">Button</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="rating_star">Rating Star</string>
    <string name="spinner">Spinner</string>
    <string name="switchs">Switch</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="auto_complete_text_view">Auto Complete Text View</string>
    <string name="multi_auto_complete_text">Multi Auto Complete Text</string>
    <string name="text_switcher">Text Switcher</string>
    <string name="checked_text_view">Checked Text View</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="custom_checked_box">Custom Checked Box</string>
    <string name="scroll_view">Scroll View</string>
    <string name="view_tag">View Tag</string>
</resources>