<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WidgetsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"
                app:drawableEndCompat="@drawable/icon_check_circle_24" />

            <TextView
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/rating_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_star"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/switch_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switchs"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/progress_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress_dialog"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress_bar"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/auto_complete_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_complete_text_view"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/multi_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multi_auto_complete_text"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>
            <TextView
                android:id="@+id/text_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_switcher"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/checked_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checked_text_view"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>
            <TextView
                android:id="@+id/toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toggle_button"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/custom_checked_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_checked_box"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scroll_view"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>

            <TextView
                android:id="@+id/view_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_tag"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:background="@drawable/widget_background_stroke"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>